# olinoboat

./: .gitignore  CMakeLists.txt  README.md  THINGS_TO_DO_OVER_THE_SUMMER  example.csv  mainpage.dox  manifest.xml.backup  mission_file.csv  mission_file_csv_howto.txt  package.xml  setup.py
CBI_sailbot_code/: auto_trim_sails.py
arduino/Arduino_PubSub/: Arduino_PubSub.ino
arduino/Compass_Debug_Calibrate/: Compass_Debug_Calibrate.ino
arduino/Compass_Debug_Heading/: Compass_Debug_Heading.ino
arduino/EncoderRead_RosPub/: EncoderRead_RosPub.ino.save  EncoderRead_RosPub.ino~
arduino/GPS_AddRest/: GPS_AddRest.ino
bagfiles/: 2013-04-29-17-32-54.bag  subset.bag
launch/: CBI_launch.launch  bag.launch  bag.launch.save  blink.launch  calibrate.launch  check_arduino.launch  check_rudder_control.launch  check_sail_control.launch  check_sensor_data.launch  check_think_code.launch  fake_gps.launch  hello.launch  mission_publisher_test.launch  teleop.launch
scripts/: NOTES FOR DOCUMENTATION  auto_trim_sails.py  boat_brain.py  calibration.txt  fake_gps_data.py  fake_gps_goal.py  fake_gps_listener.py  get_headings.py  go_fast.py  go_short.py  init_calibrate_sketch_start_serial_node.py  init_pubsub_sketch_start_serial_node.py  init_sensors.py  maintain_fast_sail_angle.py  mission_publish.py  mock_sensor_publishers.py  point_boat_at_target.py  publish_offsets.py  set_compass.py  set_offset.py  set_servo.py  tack_now.py  teleop.py  teleop_silent.py  test_normal_distribution.py  test_parser.py  think.py  think.py.save  think_v1.py  think_with_plotting.py  write_calibration.py
(+99 files in other folders)
